--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Collaboration</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Hosting Seminar by Dr. Land in Sep. 2019 </p>
+      <img src="https://github.com/YujiaoMai/yujiaomai.github.io/blob/main/DrLaneSep2019.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Conference</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Conference JSM 2019</p>
+      <img src="https://github.com/YujiaoMai/yujiaomai.github.io/blob/main/JSM2019.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
       <p>Accpeted Paper</p>
