--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     <div class="col-sm-3"> 
       <p>Conference JSM 2019</p>
-      <img src="https://raw.githubusercontent.com/YujiaoMai//yujiaomai.github.io/blob/main/JSM2019.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/JSM2019.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
       <p>Accpeted Paper</p>
