--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
   <h2> Software Packages </h2>
     <div class="col-sm-3" >
       <h4>OmegaESEM<h4>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Omega_uc_lc.svg/150px-Omega_uc_lc.svg.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
     </div>   
     <div class="col-sm-3"> 
       <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower</a><h4>
@@ -142,7 +142,7 @@
     </div>
     <div class="col-sm-3">
       <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
   </div>
   
