--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
   <div class="row">
   <h2> Software Packages </h2>
     <div class="col-sm-3" >
-      <h4>OmegaESEM<h4>
+      <h4>OmegaESEM (Mai, Y., Srivastava, D., & Krull, K., 2020)<h4>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
+      <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey (Mai, Y., Srivastava, D., & Zhang, H., 2019)</a><h4>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
     </div>   
     <div class="col-sm-3"> 
-      <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower</a><h4>
+      <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower (Zhang, Z., et al., 2014-2017)</a><h4>
       <img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
-      <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
+      <h4><a href='https://websem.psychstat.org/login.php'>WebSEM (Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</a><h4>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
   </div>
