--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h1>My Work</h1><br>
+  <h1> </h1><br>
   <div class="row">
-  <h2> News </h2>
+  <h1> News </h1>
     <div class="col-sm-3">
       <p>Semina</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
@@ -107,7 +107,7 @@
   </div>
   
   <div class="row">
-  <h2> Selected Publications </h2>
+  <h1> Selected Publications </h1>
     <div class="container text-center">
       <div style="text-align:left;font-size:20px ">
       <li>Mai, Y., Hu, J., Yan, Z., Zhen, S., Wang, S., &amp; Zhang, W. (2012). Structure and function of maladaptive cognitions in Pathological Internet Use among Chinese adolescents. Computers in Human Behavior, 28(6), 2376-2386. <br><a href='#'>Paper</a></ul>
@@ -127,21 +127,25 @@
   </div>
   
   <div class="row">
-  <h2> Software Packages </h2>
+  <h21> Software Packages </h1>
     <div class="col-sm-3" >
-      <h4>OmegaESEM (Mai, Y., Srivastava, D., & Krull, K., 2020)<h4>
+      <h4>OmegaESEM <h4>
+        <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey (Mai, Y., Srivastava, D., & Zhang, H., 2019)</a><h4>
+      <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
+        <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
     </div>   
     <div class="col-sm-3"> 
-      <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower (Zhang, Z., et al., 2014-2017)</a><h4>
+      <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower</a><h4>
+        <p>(Zhang, Z., et al., 2014-2017)</p>
       <img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
-      <h4><a href='https://websem.psychstat.org/login.php'>WebSEM (Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</a><h4>
+      <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
+        <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</p>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
   </div>
