--- a/index.html
+++ b/index.html
@@ -88,23 +88,25 @@
   <h1> </h1><br>
   <div class="row">
   <h1> News </h1>
-    <div class="col-sm-3">
-      <p>Semina</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+
+    <div class="col-sm-3">      
+      <h3>Became AACR Member Dec. 2020<h3>
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
+    <div class="col-sm-3">
+      <h3>Accpeted Paper in May 2020<h3>
+      <li>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </li>
+    </div>
+  </div>
     <div class="col-sm-3"> 
-      <p>Hosting Seminar by Dr. Land in Sep. 2019 </p>
+      <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <p>Conference JSM 2019</p>
+      <h3>Conference JSM 2019<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
     </div>
-    <div class="col-sm-3">
-      <p>Accpeted Paper</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
+
   
   <div class="row">
   <h1> Selected Publications </h1>
@@ -129,24 +131,28 @@
   <div class="row">
   <h21> Software Packages </h1>
     <div class="col-sm-3" >
-      <h4>OmegaESEM <h4>
-        <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
+
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
+            <h4>OmegaESEM <h4>
+        <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
     </div>
     <div class="col-sm-3"> 
-      <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
-        <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
+
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
+            <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
+        <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
     </div>   
     <div class="col-sm-3"> 
-      <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower</a><h4>
-        <p>(Zhang, Z., et al., 2014-2017)</p>
+
       <img src="https://webpower.psychstat.org/wiki/_media/logo.png" class="img-responsive" style="width:100%" alt="Image">
+            <h4><a href='https://webpower.psychstat.org/wiki/'>WebPower</a><h4>
+        <p>(Zhang, Z., et al., 2014-2017)</p>
     </div>
     <div class="col-sm-3">
-      <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
-        <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</p>
+
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
+      <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
+      <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</p>
     </div>
   </div>
   
