--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="collapse navbar-collapse" id="myNavbar" style='text-align:right; font-size:30px'>
       <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">About</a></li>
-        <li><a href="#CVymai">Curriculum Vitae</a></li>
+        <li><a href="CVymai.html">Curriculum Vitae</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Collaboration</a></li>
       </ul>
