--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#" style='font-size:44px;color:white;vertical-align: middle;'>Yujiao (Jo) Mai</a>
+      <a class="navbar-brand" href="https://yujiaomai.github.io" style='font-size:44px;color:white;vertical-align: middle;'>Yujiao (Jo) Mai</a>
     </div>
     <div class='navbar-header' style='width:50%'>     
       <p> </p>  
@@ -41,8 +41,8 @@
       <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#">About</a></li>
         <li><a href="CVymai.html">Curriculum Vitae</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Collaboration</a></li>
+        <li><a href="https://yujiaomai.github.io">Gallery</a></li>
+        <li><a href="https://yujiaomai.github.io">Collaboration</a></li>
       </ul>
     </div>
   </div>
