--- a/CVymai.html
+++ b/CVymai.html
@@ -129,7 +129,7 @@ ul
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#" style='font-size:44px;color:white;vertical-align: middle;'>Yujiao (Jo) Mai</a>
+      <a class="navbar-brand" href="https://yujiaomai.github.io" style='font-size:44px;color:white;vertical-align: middle;'>Yujiao (Jo) Mai</a>
     </div>
     <div class='navbar-header' style='width:50%'>     
       <p> </p>  
@@ -137,10 +137,10 @@ ul
     
     <div class="collapse navbar-collapse" id="myNavbar" style='text-align:right; font-size:30px'>
       <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="https://yujiaomai.github.io/">About</a></li>
-        <li><a href="#">Curriculum Vitae</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Collaboration</a></li>
+                <li class="active"><a href="#">About</a></li>
+        <li><a href="https://yujiaomai.github.io/CVymai.html">Curriculum Vitae</a></li>
+        <li><a href="https://yujiaomai.github.io">Gallery</a></li>
+        <li><a href="https://yujiaomai.github.io">Collaboration</a></li>
       </ul>
     </div>
   </div>
