--- a/CVymai.html
+++ b/CVymai.html
@@ -57,8 +57,7 @@
 	font-size:10.5pt;
 	font-family:"Times New Roman",serif;}
 a:link, span.MsoHyperlink
-	{color:blue;
-	text-decoration:underline;}
+	{color:blue;}
 p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{margin-top:0in;
 	margin-right:0in;
@@ -747,11 +746,7 @@ style='font-size:11.0pt;font-family:"Arial",sans-serif'>PI of the grant
 China), entitled “<i>Application of exploratory structural equation modeling in
 psychological research”</i>, 2012-2014</span></p>
 
-<p class=Default><span class=MsoHyperlink><span style='font-size:11.5pt;
-font-family:"Arial",sans-serif'><span style='text-decoration:none'>&nbsp;</span></span></span></p>
 
-<p class=Default><span class=MsoHyperlink><span style='font-size:11.5pt;
-font-family:"Arial",sans-serif'><span style='text-decoration:none'>&nbsp;</span></span></span></p>
 
 </div>
 
