--- a/CVymai.html
+++ b/CVymai.html
@@ -136,7 +136,7 @@ ul
     
     <div class="collapse navbar-collapse" id="myNavbar" style='text-align:right; font-size:30px'>
       <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">About</a></li>
+                <li class="active"><a href="https://yujiaomai.github.io">About</a></li>
         <li><a href="https://yujiaomai.github.io/CVymai.html">Curriculum Vitae</a></li>
         <li><a href="https://yujiaomai.github.io">Gallery</a></li>
         <li><a href="https://yujiaomai.github.io">Collaboration</a></li>
