--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
   
   <div class="row">
   <h1> Selected Publications </h1>
-    <div class="container-fluid text-center" style='width=90%;'>
-      <div style="width:100%;text-align:left;font-size:20px;">
+    <div class="container-fluid text-center">
+      <div style="width:95%;text-align:left;font-size:20px;">
       <li>Mai, Y., Hu, J., Yan, Z., Zhen, S., Wang, S., &amp; Zhang, W. (2012). Structure and function of maladaptive cognitions in Pathological Internet Use among Chinese adolescents. Computers in Human Behavior, 28(6), 2376-2386. <br><a href='#'>Paper</a></ul>
       <li>Mai, Y., &amp; Wen, Z. (2013). Exploratory structural equation modeling: A hybrid of EFA and CFA. Advances in Psychological Science, 21(5), 934-939. <br><a href='#'>Paper</a></ul>
       <li>Mai, Y., &amp; Zhang, Z. (2017). Statistical power analysis for comparing means with binary or count data based on analogous ANOVA. In: van der Ark L., Wiberg M., Culpepper S., Douglas J., Wang WC. (eds) Quantitative Psychology. IMPS 2016. Springer Proceedings in Mathematics &amp; Statistics (vol 196, pp. 381-393). Cham, Switzerland: Springer.<br><a href='#'>Book chapter</a></ul>
