--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   
   <div class="row">
   <h1> Selected Publications </h1>
-    <div class="container-fluid text-center">
+    <div class="container text-center">
       <div style="width:95%;text-align:left;font-size:20px;">
       <li>Mai, Y., Hu, J., Yan, Z., Zhen, S., Wang, S., &amp; Zhang, W. (2012). Structure and function of maladaptive cognitions in Pathological Internet Use among Chinese adolescents. Computers in Human Behavior, 28(6), 2376-2386. <br><a href='#'>Paper</a></ul>
       <li>Mai, Y., &amp; Wen, Z. (2013). Exploratory structural equation modeling: A hybrid of EFA and CFA. Advances in Psychological Science, 21(5), 934-939. <br><a href='#'>Paper</a></ul>
@@ -156,7 +156,7 @@
 
 <footer class="container-fluid text-center">
   <p>Copyright&copy Yujiao Mai 2020-2021</p>
-  <p>Webpage Template are from w3schools.com</p>
+  <p>Webpage Template is from w3schools.com</p>
 </footer>
 
 </body>
