--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 </nav>
 
 <div class="jumbotron">
-  <div class='container text-center' >   
-    	
+  <div class='container text-center' >      	
       <div style='float:left;display:inline-block;'> 
        <p><img src="https://avatars2.githubusercontent.com/u/12761613?s=460&u=b11fe93206993be2613061aba4732dfa26ea880b&v=4" class="img-responsive" style="width:85%" alt="Image"></p>
        </div>  
@@ -85,27 +84,8 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h1> </h1><br>
-  <div class="row">
-  <h1> News </h1>
-    <div class="col-sm-3">      
-      <h3>Became AACR Member Dec. 2020<h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <h3>Accpeted Paper in May 2020<h3>
-      <li>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </li>
-    </div>
-    <div class="col-sm-3"> 
-      <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <h3>Conference JSM 2019<h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
-    </div>
-  </div>
-  
+  <h1> My Works </h1><br>
+
   <div class="row">
   <h1> Selected Publications </h1>
     <div class="container text-center">
@@ -145,7 +125,26 @@
     </div>
   </div>
   
-
+  <div class="row">
+  <h1> News </h1>
+    <div class="col-sm-3">      
+      <h3>Became AACR Member Dec. 2020<h3>
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <h3>Accpeted Paper in May 2020<h3>
+      <li>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </li>
+    </div>
+    <div class="col-sm-3"> 
+      <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
+    </div>
+    <div class="col-sm-3"> 
+      <h3>Conference JSM 2019<h3>
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
+    </div>
+  </div>
+  
   
 </div><br>
 
