--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h1> My Works </h1><br>
-
   <div class="row">
   <h1> Selected Publications </h1>
     <div class="container text-center">
@@ -123,9 +121,9 @@
       <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
       <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</p>
     </div>
-  </div>
+  </div><br>
   
-  <div class="row">
+  <div class="row" style='background:darkgray'>
   <h1> News </h1>
     <div class="col-sm-3">      
       <h3>Became AACR Member Dec. 2020<h3>
