--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
   </div><br>
   
-  <div class="row" style='background:darkgray'>
+  <div class="row" style='background:darkgray;text-color:white;'>
   <h1> News </h1>
     <div class="col-sm-3">      
       <h3 style="text-color:blue">Became AACR Member Dec. 2020<h3>
