--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </div><br>
   
   <div class="row" style='background:darkgray;text-color:white;'>
-  <h1> News </h1>
+  <h1 style="text-color:white"> News </h1>
     <div class="col-sm-3">      
       <h3 style="text-color:blue">Became AACR Member Dec. 2020<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
