--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="https://yujiaomai.github.io">About</a></li>
         <li><a href="https://yujiaomai.github.io/CVymai.html">Curriculum Vitae</a></li>
-        <li><a href="https://yujiaomai.github.io">Gallery</a></li>
+        <li><a href="https://yujiaomai.github.io/#myNews">Gallery</a></li>
         <li><a href="https://yujiaomai.github.io">Collaboration</a></li>
       </ul>
     </div>
@@ -123,7 +123,7 @@
     </div>
   </div><br>
   
-  <div class="row" style='background:darkgray;text-color:white;'>
+  <div class="row" style='background:darkgray;text-color:white;' id="myNews">
   <h1 style="text-color:white"> News </h1>
     <div class="col-sm-3">      
       <h3 style="text-color:blue">Became AACR Member Dec. 2020<h3>
