--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="jumbotron">
   <div class='container text-center' >      	
       <div style='float:left;display:inline-block;'> 
-       <p><img src="https://avatars2.githubusercontent.com/u/12761613?s=460&u=b11fe93206993be2613061aba4732dfa26ea880b&v=4" class="img-responsive" style="width:85%" alt="Image"></p>
+       <p><img src="https://avatars2.githubusercontent.com/u/12761613?s=460&u=b11fe93206993be2613061aba4732dfa26ea880b&v=4" class="img-responsive" style="width:85%;border-radius: 35%;" alt="Image"></p>
        </div>  
       <div style='display:block;vertical-align:bottom;'> 
       	<h2 style='text-align:left'>Yujiao (Jo) Mai<h2>
