--- a/CVymai.html
+++ b/CVymai.html
@@ -138,7 +138,7 @@ ul
       <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="https://yujiaomai.github.io">About</a></li>
         <li><a href="https://yujiaomai.github.io/CVymai.html">Curriculum Vitae</a></li>
-        <li><a href="https://yujiaomai.github.io">Gallery</a></li>
+        <li><a href="https://yujiaomai.github.io/#MyNews">Gallery</a></li>
         <li><a href="https://yujiaomai.github.io">Collaboration</a></li>
       </ul>
     </div>
