--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   
 </div><br>
 
-<footer class="container-fluid text-center" style='background:darkgray;'>
+<footer class="container-fluid text-center" style='background:lightgray;'>
   <p>Copyright&copy Yujiao Mai 2020-2021</p>
   <p>Webpage Template is from w3schools.com</p>
 </footer>
