--- a/CVymai.html
+++ b/CVymai.html
@@ -173,9 +173,8 @@ margin-bottom:0in;margin-left:.25in;margin-bottom:.0001pt;text-align:left;
 text-indent:-.25in;text-autospace:none'><span style='font-size:12.0pt;
 font-family:Wingdings;letter-spacing:-.3pt'>ü<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
-letter-spacing:-.3pt'>Structural equation modeling (SEM);</span><span
-style='font-family:"Arial",sans-serif'> Mediation analysis; Psychological
-measurements; and the Application to cancer research.</span></p>
+letter-spacing:-.3pt'>Structural equation modeling (SEM); Mediation analysis; Psychological
+measurements; software development, and applying quantitative techinques (e.g., SEM and machine learning) to cancer research.</span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
@@ -337,7 +336,7 @@ font-family:"Arial Black",sans-serif'>POSITIONS</span></b></p>
 
 <p class=MsoNormal align=left style='margin-top:6.0pt;text-align:left;
 text-autospace:none'><span style='font-size:12.0pt;font-family:"Arial Black",sans-serif'>Senior
-Researcher/Data Analyst</span><span style='font-size:12.0pt;font-family:"Arial",sans-serif'>, 
+Researcher/Data Analyst (SQL server)</span><span style='font-size:12.0pt;font-family:"Arial",sans-serif'>, 
 <b>                                                            </b>2008 – 2012</span></p>
 
 <p class=MsoNormal align=left style='text-align:left;text-autospace:none'><i><span
@@ -561,6 +560,19 @@ Mediation analysis for complex surveys (version 1.1.1.2.0) [Computer Software].<
 Retrieved from https://cran.r-project.org/package=MedSurvey</span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
+<p class=MsoNormal align=left style='margin-top:12.0pt;text-align:left;
+text-autospace:none;border:none;padding:0in'><b><span style='font-size:14.0pt;
+font-family:"Arial Black",sans-serif'>INVITED TALKS</span></b></p>
+</div>
+<p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
+text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
+style='font-size:11.0pt;font-family:"Arial",sans-serif'>Mai, Y., Srivastava, D.
+K., &amp; Zhang, H. (2019 Nov). <i>Classic mediation analysis for complex
+surveys with balanced repeated replications</i>. Invited talk at Biostatistics
+Seminar of the University of Tennessee Health Science Center, Memphis,
+Tennessee: US.</span></p>	
+	
+<div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
 <p class=MsoNormal align=left style='margin-top:12.0pt;text-align:left;
 text-autospace:none;border:none;padding:0in'><b><span style='font-size:14.0pt;
@@ -572,7 +584,7 @@ font-family:"Arial Black",sans-serif'>CONFERENCE ABSTRACTS</span></b></p>
 margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;text-align:left;
 text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
 style='font-size:11.0pt;font-family:"Arial",sans-serif'>Mai, Y., &amp; Wen, Z.
-(2014 Aug). <i>Regression analysis with multidimensional latent: comparing ESEM
+(2014 Aug). <i>Regression analysis with multidimensional latent: Comparing ESEM
 and SEM</i>. Poster presented at the 11th Cross-Straits Conference on
 Educational and Psychological Testing, Taiwan: China.</span></p>
 
@@ -633,14 +645,6 @@ style='font-size:11.0pt;font-family:"Arial",sans-serif'>Mai, Y., Srivastava, D.
 K., &amp; Zhang, H. (2019 July). <i>Mediation analysis with binary mediators: A
 new parametric method and R programs</i>. Presented at the 2019 Joint Statistics
 Meeting, Denver, Colorado: US.</span></p>
-
-<p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
-text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
-style='font-size:11.0pt;font-family:"Arial",sans-serif'>Mai, Y., Srivastava, D.
-K., &amp; Zhang, H. (2019 Nov). <i>Classic mediation analysis for complex
-surveys with balanced repeated replications</i>. Invited talk at Biostatistics
-Seminar of the University of Tennessee Health Science Center, Memphis,
-Tennessee: US.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
