--- a/CVymai.html
+++ b/CVymai.html
@@ -174,7 +174,7 @@ text-indent:-.25in;text-autospace:none'><span style='font-size:12.0pt;
 font-family:Wingdings;letter-spacing:-.3pt'>ü<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
 letter-spacing:-.3pt'>Structural equation modeling (SEM); Mediation analysis; Psychological
-measurements; software development, and applying quantitative techinques (e.g., SEM and machine learning) to cancer research.</span></p>
+measurements; software packages development, and applying quantitative techinques to cancer research.</span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
@@ -503,6 +503,24 @@ Springer.</span></p>
 margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;text-align:left;
 text-indent:-.5in;text-autospace:none'><span style='font-size:12.0pt;
 font-family:"Arial",sans-serif'>&nbsp;</span></p>
+	
+<BR>
+
+	
+<p class=MsoNormal align=left style='margin-top:6.0pt;margin-right:0in;
+margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;text-align:left;
+text-indent:-.5in;text-autospace:none'><b><i><span style='font-size:12.0pt;
+font-family:"Arial",sans-serif'>UNDER REVIEW:</span></i></b></p>
+	
+<p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
+text-indent:-.5in;text-autospace:none'><span style='font-size:11.0pt;font-family:"Arial",sans-serif;color:black;'>
+	Porter, J.S., Paladino, A.J., Russell, k., Rupff, R., Griffith, J., </span><b><span style='font-size:11.0pt;
+font-family:"Arial",sans-serif;color:black;'>Mai, Y.</span></b><span
+style='font-size:11.0pt;font-family:"Arial",sans-serif;color:black;'>, Zhang, H., Hankins, J.S., &amp; Wang, W.C.
+(2019). Nocturnal enuresis in sickle cell: Sociodemographic, medical, and quality of life factors.&nbsp;<i>Journal of Pediatric Psychology.</span></p>	
+
+	<BR>	
+	
 
 <p class=MsoNormal align=left style='margin-top:6.0pt;margin-right:0in;
 margin-bottom:0in;margin-left:.5in;margin-bottom:.0001pt;text-align:left;
