--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div style='display:inline-block;width=100%; height=100%'>
         <h2>Biography<h2>
         <div style='text-align:left;'>
-        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. She is currently seeking for a new position in the field of cancer research. Yujiao’s recent research interests include structural equation modeling (SEM), mediation analysis, psychological measurements, software development, and applying quantitative techniques (e.g., SEM and machine learning) to cancer surviorship research.  
+        <p>Yujiao Mai received her Bachelor degree in computer science and technology in 2005, Master degree in developmental psychology in 2008, and PhD in quantitative psychology in 2014 at South China Normal University. She then finished postdoc trainings in quantitative psychology at the University of Notre Dame, and biostatistics at the University of Central Florida and St. Jude Children's Research Hospital. Yujiao’s recent research interests include structural equation modeling (SEM), mediation analysis, psychological measurements, software development, and applied quantitative techniques for cancer surviorship research. She is currently seeking for a new position in the field of cancer research.  
         </p>
         </div>
       
