--- a/CVymai.html
+++ b/CVymai.html
@@ -154,19 +154,16 @@ ul
 name="_Hlk61613919"><b><span style='font-size:22.0pt;font-family:"Arial Black",sans-serif;
 color:black'>Yujiao Mai</span></b></a></p>
 
-<p class=MsoNormal align=left style='text-align:left;text-autospace:none'><a
-href="https://yujiaomai.github.io/"><i><span style='font-size:12.0pt;
+<p class=MsoNormal align=left style='text-align:left;text-autospace:none'><b><span
+style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black'>Web:</span></b>
+<a href="https://yujiaomai.github.io/"><i><span style='font-size:12.0pt;
 font-family:"Arial",sans-serif'>https://yujiaomai.github.io/</span></i></a><span
 style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black'>         </span></p>
 
-<p class=MsoNormal align=left style='text-align:left;text-autospace:none'><b>Email:</b></span> <i><span style='font-size:12.0pt;font-family:
-"Arial",sans-serif'>yujiaomai@gmail.com</span></i><span style='font-size:12.0pt;
-font-family:"Arial",sans-serif;color:black'>             </span></p>
-
 <p class=MsoNormal align=left style='text-align:left;text-autospace:none'><b><span
-style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black'>Address: </span></b><i><span
-style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black'>6719
-Windmill LN APT 2, Memphis, TN 38120, USA</span></i></p>
+style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black'>Email:</span></b>
+<i><span style='font-size:12.0pt;font-family:"Arial",sans-serif'>yujiaomai@gmail.com</span></i><span
+style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black'>             </span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
@@ -183,8 +180,8 @@ font-family:Wingdings;letter-spacing:-.3pt'>ü<span style='font:7.0pt "Times New
 </span></span><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
 letter-spacing:-.3pt'>Structural equation modeling (SEM);</span><span
 style='font-size:11.0pt;font-family:"Arial",sans-serif'> Mediation analysis;
-Psychological measurements; Software packages development; and applied quantitative
-techniques for cancer research.</span></p>
+Psychological measurements; Software packages development; and Applied quantitative
+techniques for Cancer research.</span></p>
 
 <div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
 
@@ -454,13 +451,11 @@ parental race/ethnicity and smoking behaviors. <i>Preventive Medicine Reports,
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;text-autospace:none'><b><span style='font-size:11.0pt;
-font-family:"Arial",sans-serif;color:black;background:white'>Mai, Y.</span></b><span
-style='font-size:11.0pt;font-family:"Arial",sans-serif;color:black;background:
-white'>, &amp; </span><span style='font-size:11.0pt;font-family:"Arial",sans-serif'>Soulakova<span
-style='color:black;background:white'>, J. N. (2018). Retrospective reports of
-former smokers: Receiving doctor's advice to quit smoking and using behavioral
-interventions for smoking cessation in the United States.&nbsp;<i>Preventive
-medicine reports</i>,&nbsp;<i>11</i>, 290-296.</span></span></p>
+font-family:"Arial",sans-serif'>Mai, Y.</span></b><span style='font-size:11.0pt;
+font-family:"Arial",sans-serif'>, &amp; Soulakova, J. N. (2018). Retrospective
+reports of former smokers: Receiving doctor's advice to quit smoking and using
+behavioral interventions for smoking cessation in the United States.&nbsp;<i>Preventive
+medicine reports</i>,&nbsp;<i>11</i>, 290-296.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;text-autospace:none'><b><span style='font-size:11.0pt;
@@ -480,27 +475,26 @@ Journal, 25(</i>5),<i> </i>737-749.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;text-autospace:none'><b><span style='font-size:11.0pt;
-font-family:"Arial",sans-serif;color:black;background:white'>Mai, Y.</span></b><span
-style='font-size:11.0pt;font-family:"Arial",sans-serif;color:black;background:
-white'>, Ha, T., &amp; Soulakova, J. N. (2019). Workplace smoking restrictions
-and support for smoking cessation in the USA: state, region, and overall trends
-from 2010–11 to 2014–15.&nbsp;<i>Journal of Smoking Cessation</i>, 1-10.</span></p>
+font-family:"Arial",sans-serif'>Mai, Y.</span></b><span style='font-size:11.0pt;
+font-family:"Arial",sans-serif'>, Ha, T., &amp; Soulakova, J. N. (2019).
+Workplace smoking restrictions and support for smoking cessation in the USA:
+state, region, and overall trends from 2010–11 to 2014–15.&nbsp;<i>Journal of
+Smoking Cessation</i>, 1-10.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;text-autospace:none'><b><span style='font-size:11.0pt;
-font-family:"Arial",sans-serif;color:black;background:white'>Mai, Y.</span></b><span
-style='font-size:11.0pt;font-family:"Arial",sans-serif;color:black;background:
-white'>, Ha, T., &amp; Soulakova, J. N. (2019). Multimediation method with
-balanced repeated replications for analysis of complex surveys.&nbsp;<i>Structural
-Equation Modeling: A Multidisciplinary Journal,</i> 26 (5), 678-684.</span></p>
+font-family:"Arial",sans-serif'>Mai, Y.</span></b><span style='font-size:11.0pt;
+font-family:"Arial",sans-serif'>, Ha, T., &amp; Soulakova, J. N. (2019).
+Multimediation method with balanced repeated replications for analysis of
+complex surveys.&nbsp;<i>Structural Equation Modeling: A Multidisciplinary
+Journal,</i> 26 (5), 678-684.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;text-autospace:none'><span style='font-size:11.0pt;
-font-family:"Arial",sans-serif;color:black;background:white'>Zheng, J., An, X.,
-Qian, J. Y., <b>Mai, Y.</b>, Xu, Z., &amp; Xu, T. (2020). Research letter: ED90
-of phenylephrine prophylactic bolus dose to prevent maternal hypotension during
-cesarean delivery.&nbsp;<i>Journal of Clinical Anesthesia</i>,&nbsp;<i>64</i>,
-109812.</span></p>
+font-family:"Arial",sans-serif'>Zheng, J., An, X., Qian, J. Y., <b>Mai, Y.</b>,
+Xu, Z., &amp; Xu, T. (2020). Research letter: ED90 of phenylephrine
+prophylactic bolus dose to prevent maternal hypotension during cesarean
+delivery.&nbsp;<i>Journal of Clinical Anesthesia</i>,&nbsp;<i>64</i>, 109812.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;text-autospace:none'><b><span style='font-size:11.0pt;
@@ -648,16 +642,15 @@ text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
 style='font-size:11.0pt;font-family:"Arial",sans-serif'>Soulakova, J. N., &amp;
 Mai, Y. (2018 Feb). <i>Smoking policy and support for smoking cessation offered
 at work: Recent trends in the United States.</i> Paper presented at the 24th
-Annual Meeting of the Society for Research on Nicotine and Tobacco (SRNT), <span
-style='color:black;background:white'>Baltimore, Maryland: US.</span></span></p>
+Annual Meeting of the Society for Research on Nicotine and Tobacco (SRNT), Baltimore,
+Maryland: US.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
 style='font-size:11.0pt;font-family:"Arial",sans-serif'>Tham, T., Mai, Y.,
 &amp; Soulakova, J. N. (2018 March). <i>Mediation analysis of big data:
 Detecting effect of a mediator.</i> Poster presented at the University of
-Central Florida 2018 Big Data Series on Healthcare, <span style='color:black;
-background:white'>Orlando, Florida: US.</span></span></p>
+Central Florida 2018 Big Data Series on Healthcare, Orlando, Florida: US.</span></p>
 
 <p class=MsoNormal align=left style='margin-left:.5in;text-align:left;
 text-indent:-.5in;layout-grid-mode:char;text-autospace:none'><span
@@ -776,46 +769,6 @@ style='font-size:11.0pt;font-family:"Arial",sans-serif'>PI of the grant
 (2012kyjj106) from Graduate School of South China Normal University (Guangzhou,
 China), entitled “<i>Application of exploratory structural equation modeling in
 psychological research”</i>, 2012-2014</span></p>
-
-<div style='border:none;border-bottom:solid windowtext 1.0pt;padding:0in 0in 0in 0in'>
-
-<p class=MsoNormal align=left style='margin-top:12.0pt;text-align:left;
-text-autospace:none;border:none;padding:0in'><b><span style='font-size:14.0pt;
-font-family:"Arial Black",sans-serif;color:black'>REFERENCES</span></b></p>
-
-</div>
-
-<p class=Default style='margin-top:3.0pt'><b><span style='font-family:"Arial",sans-serif'>Zhiyong
-Zhang</span></b></p>
-
-<p class=Default><span style='font-size:11.0pt;font-family:"Arial",sans-serif'>Associate
-Professor of Quantitative Psychology at University of Notre Dame</span></p>
-
-<p class=Default><span style='font-size:11.0pt;font-family:"Arial",sans-serif'>+1
-574-631-2902 </span><a href="mailto:zzhang4@nd.edu"><span style='font-size:
-11.0pt;font-family:"Arial",sans-serif'>zzhang4@nd.edu</span></a></p>
-
-<p class=Default style='margin-top:3.0pt'><b><span style='font-family:"Arial",sans-serif'>Julia
-N Soulakova</span></b></p>
-
-<p class=Default><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
-color:windowtext'>Biostatistician/Faculty Member of Medicine (Biostatistics) at
-University </span><span style='font-size:11.0pt;font-family:"Arial",sans-serif'>of
-Central Florida</span></p>
-
-<p class=Default><span style='font-size:11.0pt;font-family:"Arial",sans-serif'>+1
-407-266-7072 </span><a href="Julia.Soulakova@ucf.edu"><span style='font-size:
-11.0pt;font-family:"Arial",sans-serif'>Julia.Soulakova@ucf.edu</span></a></p>
-
-<p class=Default style='margin-top:3.0pt'><b><span style='font-size:11.5pt;
-font-family:"Arial",sans-serif'>Deo Kumar Srivastava</span></b></p>
-
-<p class=Default><span style='font-size:11.5pt;font-family:"Arial",sans-serif'>Member
-of Biostatistics at St. Jude Children’s Research Hospital</span></p>
-
-<p class=Default><span style='font-size:11.5pt;font-family:"Arial",sans-serif'>+1
-901-595-3372 </span><a href="kumar.srivastava@stjude.org"><span
-style='font-size:11.5pt;font-family:"Arial",sans-serif'>kumar.srivastava@stjude.org</span></a></p>
 
 </div>
 
