--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     <div class="col-sm-3">
       <h3>Accpeted Paper in May 2020<h3>
       <li>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </li>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/SpringerBook2020.jpg" class="img-responsive" style="width:100;" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <h3>Conference JSM 2019<h3>
