--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
   <div class="row">
   <h1> Software Packages </h1>
     <div class="col-sm-3" >
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
             <h4>OmegaESEM <h4>
         <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
     </div>
     <div class="col-sm-3"> 
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/MedSurvey.png" class="img-responsive" style="width:100%" alt="Image">
             <h4><a href='https://cran.r-project.org/web/packages/MedSurvey/index.html'>MedSurvey</a><h4>
         <p>(Mai, Y., Srivastava, D., & Zhang, H., 2019)</p>
     </div>   
@@ -117,7 +117,7 @@
         <p>(Zhang, Z., et al., 2014-2017)</p>
     </div>
     <div class="col-sm-3">
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/WebSEM.png" class="img-responsive" style="width:100%" alt="Image">
       <h4><a href='https://websem.psychstat.org/login.php'>WebSEM</a><h4>
       <p>(Zhang, Z., Yuan, K.-H., & Mai, Y., 2014-2017)</p>
     </div>
@@ -127,20 +127,20 @@
   <h1 style="text-color:white"> News </h1>
     <div class="col-sm-3" style="text-color:blue">      
       <h3>Became AACR Member Dec. 2020<h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
       <h3>Accpeted Paper in May 2020<h3>
       <li>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </li>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/DrLaneSep2019.png" class="img-responsive" style="width:100;" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <h3>Conference JSM 2019<h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
     </div>
   </div>
   
