--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
   <h1 style="text-color:white"> News </h1>
     <div class="col-sm-3" style="text-color:blue">      
       <h3>Became AACR Member Dec. 2020<h3>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmember2020.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/AACRmembership.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3">
       <h3>Accpeted Paper in May 2020<h3>
-      <li>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </li>
+      <p>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
