--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="row">
   <h1> Software Packages </h1>
     <div class="col-sm-3" >
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/omegaESEM.png" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Omega.png" class="img-responsive" style="width:100%" alt="Image">
             <h4>OmegaESEM <h4>
         <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
     </div>
