--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="col-sm-3">
       <h3>Accpeted Paper in May 2020<h3>
-      <p>Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>
+      <p style="font=12px">Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-3"> 
