--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
       <h3>Conference JSM 2019<h3>
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/JSM2019.png" class="img-responsive" style="width:%100;" alt="Image">
     </div>
+    <div class="col-sm-3"> 
+      <h3>Clinical Phase II Short Course 2019<h3>
+      <p style="font=12px">I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p>   
+      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII2019.jpg" class="img-responsive" style="width:%100;" alt="Image">
+    </div>
   </div>
   
   
