--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <h1> Software Packages </h1>
     <div class="col-sm-3" >
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/Omega.png" class="img-responsive" style="width:100%" alt="Image">
-            <h4>OmegaESEM <h4>
+            <h4>Omega-ESEM/BSEM<h4>
         <p> (Mai, Y., Srivastava, D., & Krull, K., 2020)</p>
     </div>
     <div class="col-sm-3"> 
@@ -131,8 +131,8 @@
     </div>
     <div class="col-sm-3">
       <h3>Accpeted Paper in May 2020<h3>
-      <p style="font=12px">Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>
-      <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
+       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/SpringerBook2020.jpg" class="img-responsive" style="width:100%" alt="Image">
+         <p> Mai, Y., & Zhang, H. (accepted). Classic linear mediation analysis of complex survey data using balanced repeated replication. In: Zhao, Y. & Chen, D. (eds), Modern Statistical Methods for Health Research. New York, NY: Springer. </p>
     </div>
     <div class="col-sm-3"> 
       <h3>Hosting Seminar by Dr. Land in July 2019 <h3>
@@ -144,8 +144,8 @@
     </div>
     <div class="col-sm-3"> 
       <h3>Clinical Phase II Short Course 2019<h3>
-      <p style="font=12px">I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p>   
       <img src="https://raw.githubusercontent.com/YujiaoMai/yujiaomai.github.io/main/Figure/ClinicalPhaseII2019.jpg" class="img-responsive" style="width:%100;" alt="Image">
+        <p style="font=12px">I completed the course in The 7th Workshop on Biostatistics and Bioinformatics, May 10-12, 2019, Atlanta, GA</p>   
     </div>
   </div>
   
